--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,13 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
   }
   
   .container {
     text-align: center;
+    width: 100%;
+    max-width: 600px;
   }
   
   .animation-box {
@@ -37,5 +40,11 @@
     margin-bottom: 20px;
     width: 80%;
     max-width: 300px;
+  }
+  
+  #scrollIndicator {
+    margin-top: 50px;
+    font-size: 18px;
+    color: #333;
   }
   
