--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,5 @@ body {
   color:white;
   background-color: black;
   text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
