--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,5 @@ body {
   background-color: black;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
 }
