--- a/src/srcStyles.css
+++ b/src/srcStyles.css
@@ -1,7 +1,18 @@
 body {
     margin: 0;
     padding: 0;
-    list-style-type: none;
     background-color: black;
     color:white;
+}
+ul {
+    list-style-type: none;
+}
+ul li {
+    list-style-type: none;
+}
+ul li ul {
+    list-style-type:none;
+}
+ul li ul li {
+    list-style-type: none;
 }
