--- a/src/srcStyles.css
+++ b/src/srcStyles.css
@@ -1,18 +1,74 @@
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: black;
-    color:white;
+    padding: 20px;
+    background-color: #1a1a1a;
+    color: #f0f0f0;
+    line-height: 1.6;
+}
+
+h1 {
+    text-align: center;
+    color: #4CAF50;
+    border-bottom: 2px solid #4CAF50;
+    padding-bottom: 10px;
+}
+
+ul {
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+li > ul {
+    margin-top: 10px;
+}
+
+li > ul > li {
+    color: #bbb;
+}
+
+li > ul > li > ul {
+    margin-top: 5px;
+}
+
+li > ul > li > ul > li {
+    color: #999;
+    font-size: 0.95em;
+}
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+    
+    h1 {
+        font-size: 1.5em;
+    }
+    
+    li > ul > li > ul > li {
+        font-size: 0.9em;
+    }
 }
 ul {
     list-style-type: none;
 }
-ul li {
-    list-style-type: none;
+
+li::before {
+    content: "•";
+    color: #4CAF50;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
 }
-ul li ul {
-    list-style-type:none;
+
+li > ul > li::before {
+    content: "◦";
+    color: #bbb;
 }
-ul li ul li {
-    list-style-type: none;
+
+li > ul > li > ul > li::before {
+    content: "▪";
+    color: #999;
 }
