--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ h1, h2 {
 .tech-boxes-container {
     display: flex;
     animation: slideLeft 15s linear infinite;
-    padding-left: 20px;
+    width: 100%;
 }
 
 .tech-box {
@@ -93,6 +93,8 @@ button {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    display: block;
+    margin: 20px auto; /* Centers the button */
 }
 
 button:hover,
